fix border radius on featured bleed

--- a/_sass/scss/base/_blocks.scss
+++ b/_sass/scss/base/_blocks.scss
@@ -48,6 +48,7 @@
 .header-logo + .story {
 	max-width: 100%;
 	margin-top: -7em;
+	border-radius: 0;
 	div {
 		max-width: 45em;
 		margin: 0 auto;
